--- a/.gitmodules
+++ b/.gitmodules
@@ -43,9 +43,9 @@
 [submodule "pack/colors/opt/paper"]
 	path = pack/colors/opt/paper
 	url = https://github.com/YorickPeterse/vim-paper.git
-[submodule "pack/colors/solarized"]
+[submodule "pack/colors/opt/solarized"]
 	path = pack/colors/opt/solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
+	url = https://github.com/ericbn/vim-solarized.git
 [submodule "pack/ui/opt/lightline"]
 	path = pack/ui/opt/lightline
 	url = https://github.com/itchyny/lightline.vim.git
