--- a/.gitmodules
+++ b/.gitmodules
@@ -17,7 +17,7 @@
 	path = pack/core/start/repeat
 	url = https://github.com/tpope/vim-repeat.git
 [submodule "pack/dev/start/gitgutter"]
-	path = pack/dev/start/gitgutter
+	path = pack/ui/opt/gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
 [submodule "pack/dev/start/commentary"]
 	path = pack/dev/start/commentary
@@ -46,3 +46,24 @@
 [submodule "pack/colors/solarized"]
 	path = pack/colors/opt/solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "pack/ui/opt/lightline"]
+	path = pack/ui/opt/lightline
+	url = https://github.com/itchyny/lightline.vim.git
+[submodule "pack/dev/opt/ale"]
+	path = pack/dev/opt/ale
+	url = https://github.com/dense-analysis/ale.git
+[submodule "pack/neo/opt/alpha"]
+	path = pack/neo/opt/alpha
+	url = https://github.com/goolord/alpha-nvim.git
+[submodule "pack/neo/opt/lush"]
+	path = pack/neo/opt/lush
+	url = https://github.com/rktjmp/lush.nvim.git
+[submodule "pack/colors/opt/nord"]
+	path = pack/colors/opt/nord
+	url = https://github.com/kunzaatko/nord.nvim.git
+[submodule "pack/colors/opt/onedarkpro"]
+	path = pack/colors/opt/onedarkpro
+	url = https://github.com/olimorris/onedarkpro.nvim.git
+[submodule "pack/neo/opt/gitsigns"]
+	path = pack/neo/opt/gitsigns
+	url = https://github.com/lewis6991/gitsigns.nvim.git
