--- a/.gitmodules
+++ b/.gitmodules
@@ -58,6 +58,7 @@
 [submodule "pack/neo/opt/lush"]
 	path = pack/neo/opt/lush
 	url = https://github.com/rktjmp/lush.nvim.git
+  ignore = dirty
 [submodule "pack/colors/opt/nord"]
 	path = pack/colors/opt/nord
 	url = https://github.com/kunzaatko/nord.nvim.git
