--- a/.gitmodules
+++ b/.gitmodules
@@ -71,3 +71,6 @@
 [submodule "pack/dev/opt/vala"]
 	path = pack/dev/opt/vala
 	url = https://github.com/vala-lang/vala.vim.git
+[submodule "pack/core/start/cutlass"]
+	path = pack/core/start/cutlass
+	url = https://github.com/svermeulen/vim-cutlass.git
