--- a/.gitmodules
+++ b/.gitmodules
@@ -71,3 +71,12 @@
 [submodule "pack/core/start/cutlass"]
 	path = pack/core/start/cutlass
 	url = https://github.com/svermeulen/vim-cutlass.git
+[submodule "pack/colors/opt/solarized"]
+	path = pack/colors/opt/solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "pack/core/start/yoink"]
+	path = pack/core/start/yoink
+	url = https://github.com/svermeulen/vim-yoink.git
+[submodule "pack/core/start/subversive"]
+	path = pack/core/start/subversive
+	url = https://github.com/svermeulen/vim-subversive.git
