--- a/.gitmodules
+++ b/.gitmodules
@@ -89,3 +89,6 @@
 [submodule "pack/neo/opt/which-key"]
 	path = pack/neo/opt/which-key
 	url = https://github.com/folke/which-key.nvim.git
+[submodule "pack/core/opt/gnupg"]
+	path = pack/core/opt/gnupg
+	url = https://github.com/jamessan/vim-gnupg.git
