Fix gnupg submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -86,7 +86,7 @@
 [submodule "pack/neo/opt/which-key"]
 	path = pack/neo/opt/which-key
 	url = https://github.com/folke/which-key.nvim.git
-[submodule "pack/core/opt/gnupg"]
+[submodule "pack/core/start/gnupg"]
 	path = pack/core/start/gnupg
 	url = https://github.com/jamessan/vim-gnupg.git
 [submodule "pack/core/start/argwrap"]
