--- a/.gitmodules
+++ b/.gitmodules
@@ -129,3 +129,6 @@
 [submodule "pack/colors/opt/alabaster"]
 	path = pack/colors/opt/alabaster
 	url = https://git.sr.ht/~p00f/alabaster.nvim
+[submodule "pack/colors/opt/deepwhite"]
+	path = pack/colors/opt/deepwhite
+	url = https://github.com/Verf/deepwhite.nvim.git
