--- a/.gitmodules
+++ b/.gitmodules
@@ -132,3 +132,6 @@
 [submodule "pack/colors/opt/deepwhite"]
 	path = pack/colors/opt/deepwhite
 	url = https://github.com/Verf/deepwhite.nvim.git
+[submodule "pack/neo/opt/fzf-lua"]
+	path = pack/neo/opt/fzf-lua
+	url = https://github.com/ibhagwan/fzf-lua.git
